# TurboSMP

./: .gitignore  CMakeLists.txt
include/: fsmp.cuh
src/: main.cu
test/: CMakeLists.txt  dot.cu
